updated html and css

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/CSS/Styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 </head>
 <body>
-    <table>
+    
+    <table class="main">
         <tr>
             <td><input type="button" value="1" onclick="dis('1')" </td>
             <td><input type="button" value="2" onclick="dis('2')" </td>
