--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,5 +34,7 @@
             <td><input type="button" value="-" onclick="dis('-')" </td>
         </tr>
     </table>
+    <script src="/JAVASCRIPT/script.js"></script>
+
 </body>
 </html>
