--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/CSS/Styles.css">
+    <link rel="stylesheet" href="Styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
@@ -34,7 +34,7 @@
             <td><input type="button" value="-" onclick="dis('-')" </td>
         </tr>
     </table>
-    <script src="/JAVASCRIPT/script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
