--- a/index.html
+++ b/index.html
@@ -8,32 +8,54 @@
 </head>
 <body>
     
-    <table class="main">
-        <tr>
-            <td><input type="button" value="1" onclick="dis('1')" </td>
-            <td><input type="button" value="2" onclick="dis('2')" </td>
-            <td><input type="button" value="3" onclick="dis('3')" </td>
-            <td><input type="button" value="/" onclick="dis('/')" </td>
-        </tr>
-        <tr>
-            <td><input type="button" value="4" onclick="dis('4')" </td>
-            <td><input type="button" value="5" onclick="dis('5')" </td>
-            <td><input type="button" value="6" onclick="dis('6')" </td>
-            <td><input type="button" value="*" onclick="dis('*')" </td>
-        </tr>
-        <tr>
-            <td><input type="button" value="7" onclick="dis('7')" </td>
-            <td><input type="button" value="8" onclick="dis('8')" </td>
-            <td><input type="button" value="9" onclick="dis('9')" </td>
-            <td><input type="button" value="+" onclick="dis('+')" </td>
-        </tr>
-        <tr>
-            <td><input type="button" value="." onclick="dis('.')" </td>
-            <td><input type="button" value="0" onclick="dis('0')" </td>
-            <td><input type="button" value="=" onclick="dis('=')" </td>
-            <td><input type="button" value="-" onclick="dis('-')" </td>
-        </tr>
-    </table>
+    <table id="calcu"> 
+        <tr> 
+            <td colspan="3"><input type="text" id="result"></td> 
+            <td><input type="button" value="c" onclick="clr()" /> </td> 
+        </tr> 
+        <tr> 
+            <td><input type="button" value="1" onclick="dis('1')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="2" onclick="dis('2')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="3" onclick="dis('3')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="/" onclick="dis('/')"
+                        onkeydown="myFunction(event)"> </td> 
+        </tr> 
+        <tr> 
+            <td><input type="button" value="4" onclick="dis('4')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="5" onclick="dis('5')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="6" onclick="dis('6')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="*" onclick="dis('*')"
+                        onkeydown="myFunction(event)"> </td> 
+        </tr> 
+        <tr> 
+            <td><input type="button" value="7" onclick="dis('7')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="8" onclick="dis('8')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="9" onclick="dis('9')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="-" onclick="dis('-')"
+                        onkeydown="myFunction(event)"> </td> 
+        </tr> 
+        <tr> 
+            <td><input type="button" value="0" onclick="dis('0')"
+                        onkeydown="myFunction(event)"> </td> 
+            <td><input type="button" value="." onclick="dis('.')"
+                        onkeydown="myFunction(event)"> </td> 
+            
+            <!-- solve function call function solve to evaluate value -->
+            <td><input type="button" value="=" onclick="solve()"> </td> 
+  
+            <td><input type="button" value="+" onclick="dis('+')"
+                        onkeydown="myFunction(event)"> </td> 
+        </tr> 
+    </table> 
     <script src="script.js"></script>
 
 </body>
