--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="Styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.4.4/math.min.js"></script>
     <title>Index</title>
 </head>
 <body>
@@ -49,7 +50,6 @@
             <td><input type="button" value="." onclick="dis('.')"
                         onkeydown="myFunction(event)"> </td> 
             
-            <!-- solve function call function solve to evaluate value -->
             <td><input type="button" value="=" onclick="solve()"> </td> 
   
             <td><input type="button" value="+" onclick="dis('+')"
